--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools >= 61.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "pySORS"
+name = "pysors"
 description = "Fork of second-order-random-search with scipy.minimize-like interface."
 version = "2024.09.13"
 dependencies = [
@@ -24,7 +24,7 @@ Repository = "https://github.com/inikishev/pySORS"
 Issues = "https://github.com/inikishev/pySORS/isses"
 
 [tool.setuptools]
-package-dir = {"" = "pysors"}
+package-dir = {"" = "src"}
 
 [tool.pytest.ini_options]
 addopts = [
